# stable-software

./: Cargo.toml  Makefile.toml  README.md  package-lock.json  package.json
assets/scss/: bulma.scss  style.scss
src/: main.rs
src/models/: horse.rs  mod.rs
src/routes/: horses.rs  mod.rs
src/views/: horses.rs  layout.rs  mod.rs  utils.rs
