[package]
name = "stable-software"
version = "0.1.0"
authors = ["Neikos <neikos@neikos.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
maud = { version = "0.22.2", features = ["actix-web"] }
tracing = "0.1.26"
tracing-actix-web = "0.2.1"
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.19"
